[project]
name = "215-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "pandas>=2.0.3",
    "plotly>=6.5.0",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.10",
]


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
minversion = "9.0"
addopts = ["-ra", "-q", "--cov", "--cov-report=term-missing"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = [
    "."
]
omit = [
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true

